# gr-visualization

./: .gitignore  CMakeLists.txt  MANIFEST.md  install  install.sh  wsl_troubleshooting.sh
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-visualizationConfig.cmake
docs/: CMakeLists.txt  README.visualization
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  visualization_gauge.block.yml  visualization_map_display.block.yml  visualization_message_generator.block.yml
include/gnuradio/visualization/: CMakeLists.txt  api.h  map_display.h  telemetry_msg.h
lib/: CMakeLists.txt  map_display_impl.cc  map_display_impl.h  map_widget.cpp  map_widget.h
lib/assets/: CMakeLists.txt
python/visualization/: CMakeLists.txt  __init__.py  gauge.py  message_generator.py
python/visualization/bindings/: CMakeLists.txt  map_display_python.cc  python_bindings.cc
python/visualization/bindings/docstrings/: map_display_pydoc_template.h
